plugins/javaFX/testData/highlighting/propertyChainExpression.fxml
<?import javafx.scene.control.Label?>
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        <Label fx:id="barLabel" text="bar"/>
    </fx:define>
    <Label disable="${barLabel.border.empty}"/>
    <Label disable="${<error descr="Cannot resolve symbol 'unknown'">unknown</error>.<error descr="Cannot resolve symbol 'border'">border</error>.<error descr="Cannot resolve symbol 'empty'">empty</error>}"/>
    <Label padding=<error descr="Invalid value: unable to coerce to javafx.geometry.Insets">"${barLabel.border.empty}"</error>/>
    <Label padding="${barLabel.border.<error descr="Cannot resolve symbol 'full'">full</error>}"/>
</VBox>
